# ComfyUI-MLX-Universal

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  PR_DESCRIPTION.md  README.md  __init__.py  benchmark_list_comp.py  commit_body.md  commit_message.md  commit_message.txt  commit_msg.txt  description.md  fix.py  fix_ci_tests2.py  fix_ci_tests3.py  fix_ci_tests4.py  fix_data_types.patch  fix_diffusion_nodes.patch  fix_generate_processing.patch  fix_roadmap.py  fix_sam_nodes.patch  fix_test_bug.py  fix_test_helper.patch  fix_test_helper.py  fix_tests.py  fix_type_hints_core.patch  fix_video_nodes.patch  force_fix.py  patch_helper.py  patch_mock.py  patch_mock2.py  patch_mock3.py  patch_test.py  patch_test2.py  patch_test3.py  patch_test4.py  patch_test_runtime_audio.py  patch_test_runtime_audio_2.py  patch_test_runtime_audio_3.py  (+14 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: mlx_test.yml
diffusionkit/: utils.py
nodes/: __init__.py  audio_nodes.py  batch_nodes.py  diffusion_nodes.py  embedding_nodes.py  generate_nodes.py  loader_nodes.py  sam_nodes.py  system_nodes.py  video_nodes.py
runtime/: audio_processing.py  bridge.py  data_types.py  data_types.py.rej  diffusion_processing.py  embedding_processing.py  generate_processing.py  model_loader.py  registry.py  sam_processing.py  video_processing.py
scripts/: roadmap.py
tests/: __init__.py  test_audio_nodes.py  test_batch_nodes.py  test_diffusion_nodes.py  test_embedding_nodes.py  test_generate_nodes.py  test_helper.py  test_helper.py.orig  test_loader_nodes.py  test_runtime_audio.py  test_runtime_bridge.py  test_runtime_diffusion.py  test_runtime_generate.py  test_runtime_sam.py  test_runtime_video.py  test_sam_nodes.py  test_video_nodes.py
(+22 files in other folders)
